cmake_minimum_required(VERSION 3.17)
project(course_reader_solutions)

set(CMAKE_CXX_STANDARD 14)

add_executable(course_reader_solutions main.cpp chapter3/p35.cpp)
add_executable(p5 chapter3/p35.cpp)
add_executable(p6 chapter3/p36.cpp)
add_executable(p7 chapter3/p37.cpp)
add_executable(p39 chapter3/p39.cpp)
add_executable(p310 chapter3/p310.cpp)
add_executable(p38 chapter3/p38.cpp)